--- a/musicbox-style.css
+++ b/musicbox-style.css
@@ -1,3 +1,42 @@
 /*
 TODO(you): Write any additional styles you need here.
 */
+#music {
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: 2;
+}
+
+#bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    bottom: 0px;
+}
+
+#play {
+    background: url(images/pause.png);
+    background-size:cover;
+    border-style:none;
+    height: 60px;
+    width: 60px;
+}
+
+#background {
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: 1;
+    bottom: 70px;
+}
